fix: avoid newer collection APIs in chart